<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/parent_control">

        <SwitchPreferenceCompat
            app:key="parent"
            app:title="@string/enable_parent_control_title" />
        <EditTextPreference
            app:dependency="parent"
            app:key="parent_password"
            app:title="@string/parent_password"

            android:inputType="textPassword"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/privacy_settings_title">
        <SwitchPreferenceCompat
            app:key="telemetry_analytics"
            app:persistent="false"
            app:summary="@string/privacy_analytics_summary"
            app:title="@string/privacy_analytics_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/local_data_title">
        <Preference
            app:selectable="false"
            app:summary="@string/local_data_backup_summary"
            app:title="@string/local_data_backup_title" />
    </PreferenceCategory>

</PreferenceScreen>
